# Project_Proforma_OpenMS

./: FLASHTnTFile.cpp  FLASHTnTFile2.cpp  FLASHTnTFile3.cpp  ProForm_test.cpp  ProForma.h  ProForma1.cpp  ProForma2.cpp  ProForma2.h  ProFormaAmbiguityAffix.h  ProFormaGlobalModification.h  ProFormaParseException.h  ProFormaTag.h  ProFormaTagGroup.h  ProFormaUnlocalizedTag.h  ProFormaWriter.h  ProForma_test2.cpp  ProformaMembershipDescriptor.h  README.md
SRC/: CMakeLists.txt  Parser.cpp
SRC/Helpers/: PlatformHelper.h
SRC/ProForma/: IProformaDescriptor.h  ProFormaLogger.cpp  ProFormaParseException.cpp  ProFormaParser.cpp  ProFormaParser.h  ProFormaTagGroupChangingValue.h  ProFormaTerm.h  ProFormaWriter.cpp  ProformaDescriptor.h  ProformaLogger.h  Proformakey.h
